# tx-pipe-ingest

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  example.env  example.env.build  main.py  pyproject.toml  requirements.txt  tx.proto  tx_pb2.py
proto/: btc_tx.proto  sol_tx.proto
scripts/: generate_protos.py
src/: main.py
src/kafka/: factory.py  kafka_config.py
src/kafka/client/: base.py  client_config.py
src/kafka/clients/: producer.py
src/proto_converters/: base.py
src/proto_converters/converters/: btc.py  sol.py
src/protobuf/: base.py
src/protobuf/converters/: btc.py  sol.py
src/rpc/: base.py  http_client.py
src/rpc/alchemy/: __init__.py  base.py
src/rpc/alchemy/mixins/: get_tx.py
src/rpc/alchemy/models/: _to_proto.py  rpc_response.py  tx.py
src/rpc/clients/: btc.py  sol.py
src/rpc/models/: btc_rpc_response.py  sol_rpc_response.py
src/services/: base.py  pipe.py  sol_pipe.py
src/services/concrete/: sol.py
src/settings/: __init__.py  factory.py  kafka.py
src/settings/factories/: btc.py  kafka.py  sol.py
src/socket_listeners/: base.py
src/socket_listeners/listeners/: btc.py  sol.py
src/startup/: btc.py  sol.py
src/websockets/: base.py  listener.py
src/websockets/sol/: listener.py
tx_pipe_ingest/kafka/: exceptions.py  factory.py  kafka_config.py
tx_pipe_ingest/kafka/clients/: producer.py
tx_pipe_ingest/protobuf/converters/: btc.py  sol.py
tx_pipe_ingest/rpc/: base.py  http_client.py
tx_pipe_ingest/rpc/clients/: btc.py  sol.py
tx_pipe_ingest/rpc/models/: btc_rpc_response.py  sol_rpc_response.py
tx_pipe_ingest/services/: pipe.py
tx_pipe_ingest/settings/: __init__.py  btc.py  sol.py
tx_pipe_ingest/socket_listeners/: base.py
tx_pipe_ingest/socket_listeners/listeners/: btc.py  sol.py
tx_pipe_ingest/startup/: btc.py  sol.py
