[project]
name = "tx-pipe-ingest"
version = "0.1.0"
description = ""
authors = [
    {name = "dffdeeq",email = "dffdeeq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiohttp (>=3.11.14,<4.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "confluent-kafka (>=2.9.0,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "protobuf (>=6.30.2,<7.0.0)",
]

[project.optional-dependencies]
btc = [
    "pyzmq (>=26.3.0,<27.0.0)"
]
sol = [
    "solders (>=0.26.0,<0.27.0)",
    "solana (>=0.36.6,<0.37.0)"
]
dev = [
    "flake8"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
