[project]
name = "tx-pipe-ingest"
version = "0.1.0"
description = ""
authors = [
    {name = "dffdeeq",email = "dffdeeq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = "MIT"
dependencies = [
    "aiohttp (>=3.11.14,<4.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "confluent-kafka (>=2.9.0,<3.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "protobuf (>=5.26.1, <6.0dev)",
]

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.2.0,<8.0.0"
poethepoet = ">=0.33.1,<0.34.0"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
grpcio-tools = ">=1.71.0,<2.0.0"

[project.optional-dependencies]
btc = [
    "pyzmq (>=26.3.0,<27.0.0)"
]
sol = [
    "solders (>=0.26.0,<0.27.0)",
    "solana (>=0.36.6,<0.37.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks.generate-protos]
script = "scripts.generate_protos:main"
help = "Fetch schemas from Schema Registry (using .env) and generate Python proto code"
